# formation-path-planning

./: .gitignore  README.md
docs/: VSCodeSettings.md
formation_costmap/: CMakeLists.txt  package.xml
formation_costmap/src/: formation_costmap_params.cpp  formation_footprint_node.cpp  formation_footprint_ros.cpp  robot_footprint_ros.cpp
fp_tests/: CMakeLists.txt  package.xml
fp_tests/launch/: fp_real_master_only.launch  fp_two_robots.launch  rviz_single_robot.launch
fp_tests/rviz/: single_robot_rviz_config.rviz  three_robot_rviz_config.rviz  two_robot_rviz_config.rviz
fp_utils/: CMakeLists.txt  package.xml
fpc_ros/: CMakeLists.txt  fpc_plugin.xml  package.xml
fpc_ros/include/fpc_ros/: fpc_controller_base.h  fpc_controller_master.h  fpc_controller_slave.h  fpc_ros.h
fpc_ros/include/fpc_ros/data_classes/: controller_params.hpp  fpc_param_info.hpp  fpc_param_manager.h  fpc_robot_info.hpp  local_planner_robot_info.h  local_planner_robot_info.hpp  lyapunov_params.hpp
fpc_ros/src/: fpc_controller_base.cpp  fpc_controller_master.cpp  fpc_controller_slave.cpp  fpc_ros.cpp
fpc_ros/src/data_classes/: fpc_param_manager.cpp
fpp_gazebo/: CMakeLists.txt  package.xml
fpp_general/: CMakeLists.txt  package.xml
fpp_launch/: CMakeLists.txt  package.xml
fpp_msgs/: CMakeLists.txt  package.xml
fpp_plugin/: CMakeLists.txt  package.xml
fpp_ros/: CMakeLists.txt  fpp_plugin.xml  package.xml
fpp_ros/config/: robot_formation_config.yaml
fpp_ros/include/: fpp_ros.h
fpp_ros/include/fpp_ros/: base_fpp.h  fpp_base.h  fpp_controller_base.h  fpp_controller_master.h  fpp_controller_slave.h  fpp_master.h  fpp_ros.h  fpp_slave.h
fpp_ros/include/fpp_ros/data_classes/: fpp_controller_param.h  fpp_param_manager.h  path_planner_types.h  ras_param_manager.h  robot_info.h
fpp_ros/include/fpp_ros/footprint_generation/: formation_footprint_ros.h  robot_footprint_ros.h
fpp_ros/include/fpp_ros/geometry_info/: edge_info.h  formation_contour.h  geometry_contour.h  minimal_enclosing_circle.h  robot_contour.h
fpp_ros/include/fpp_ros/path_planner/: cubic_bezier_splines.h  general_types.h  minimal_enclosing_circle.h  quintic_bezier_splines.h  splined_relaxed_a_star.h
fpp_ros/include/fpp_ros/plan_transformation/: rigid_plan_transformation.h
fpp_ros/src/: base_fpp.cpp  fpp_base.cpp  fpp_controller_base.cpp  fpp_controller_master.cpp  fpp_controller_slave.cpp  fpp_master.cpp  fpp_ros.cpp  fpp_slave.cpp  minimal_enclosing_circle.cpp  splined_relaxed_a_star.cpp
fpp_ros/src/data_classes/: fpp_param_manager.cpp  ras_param_manager.cpp
fpp_ros/src/footprint_generation/: formation_footprint_ros.cpp  robot_footprint_ros.cpp
fpp_ros/src/geometry_info/: edge_info.cpp  formation_contour.cpp  geometry_contour.cpp  minimal_enclosing_circle.cpp  robot_contour.cpp
fpp_ros/src/nodes/: dyn_reconfig_relay_node.cpp  fpp_meta_data_sync_node.py
fpp_ros/src/path_planner/: cubic_bezier_splines.cpp  minimal_enclosing_circle.cpp  quintic_bezier_splines.cpp  splined_relaxed_a_star.cpp
fpp_ros/src/plan_transformation/: rigid_plan_transformation.cpp
fpp_ros/src/visualization_helper/: visualization_helper.cpp
path_planner/: CMakeLists.txt  advanced_a_star_plugin.xml  mbf_plugin.xml  package.xml
relaxed_a_star/: CMakeLists.txt  mbf_plugin.xml  package.xml
testing_pkg/: CMakeLists.txt  package.xml
(+131 files in other folders)
