<?xml version="1.0"?>
<package format="2">
  	<name>fpc_ros</name>
  	<version>0.0.0</version>
  	<description>The fpc_ros package</description>

  	<!-- One maintainer tag required, multiple allowed, one person per tag -->
  	<!-- Example:  -->
  	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  	<maintainer email="hlurz@todo.todo">hlurz</maintainer>


  	<!-- One license tag required, multiple allowed, one license per tag -->
  	<!-- Commonly used license strings: -->
  	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  	<license>TODO</license>

  	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>pluginlib</depend>
	<depend>mbf_costmap_core</depend>
	<depend>nav_core</depend>
	<depend>costmap_2d</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>fpp_msgs</depend>

  	<!-- The export tag contains other, unspecified, tags -->
  	<export>
		<!-- Other tools can request additional information be placed here -->
		<mbf_costmap_core plugin="${prefix}/fpc_plugin.xml" />
		<nav_core plugin="${prefix}/fpc_plugin.xml" />
  	</export>
</package>
